days/day-058/ingress-broken.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-broken
  annotations:
    # Missing ingressClassName - will not be picked up by any controller
spec:
  rules:
  - host: demo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-v1
            port:
              number: 80
